--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.wasm filter=lfs diff=lfs merge=lfs -text
 *.unityweb filter=lfs diff=lfs merge=lfs -text
+*.br filter=lfs diff=lfs merge=lfs -text
