--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.wasm filter=lfs diff=lfs merge=lfs -text
 *.unityweb filter=lfs diff=lfs merge=lfs -text
 *.br filter=lfs diff=lfs merge=lfs -text
+*.data filter=lfs diff=lfs merge=lfs -text
